[package]
name = "usv-to-json"
version = "1.1.1"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "USV to JSON: Convert Unicode Separated Values (USV) to JavaScript Object Notation (JSON) for data markup, including for spreadsheets, databases, text files, and more."
readme = "README.md"
repository = "https://github.com/sixarm/usv-to-json-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["usv", "json", "data", "import", "export"]
categories = ["command-line-utilities", "encoding", "data-structures", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# serde: Serializer/Deserialzer
serde = "1"

# serde_json: Serializer/Deserialzer for JavaScript Object Notation
serde_json = "1"

# usv: Unicode Separated Values
usv = "0.15"

# clap: Command Line Argument Parser
clap = { version = "4.5.2", features = ["cargo"] }

# log: A Rust library providing a lightweight logging facade
log = "0.4.21"

# env_logger: A logger that can be configured via environment variables
env_logger = "0.11.3"

[dev-dependencies]
criterion = ">= 0.5"
rand = ">= 0.8"
once_cell = "1.19.0"

[[bench]]
name = "example"
harness = false
